@@ -1,3 +1,11 @@
+2006-05-06  Daniel Wagner  <wagi@monom.org>
+
+	* This patch fixes two issues when building:
+	- libfreebob include files aren't found when build dir != source dir
+	- some libraries aren't found when they're not in a system install dir
+
+	Jeremy Kerr
+
 2006-05-04  Pieter Palmers  <pieterpalmers@users.sourceforge.net>
 
 	* configure.ac: Version bumped to 0.8.1
